--- a/pom.xml
+++ b/pom.xml
@@ -35,11 +35,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>3.2.3</version>
         </dependency>
+
     </dependencies>
 
 </project>
