--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
     </parent>
 
     <groupId>com.brestrai</groupId>
-    <artifactId>utils-template</artifactId>
+    <artifactId>utils</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>utils-template</name>
+    <name>brestrai-utils</name>
     <description>Utils</description>
 
     <properties>
@@ -40,6 +40,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
             <version>3.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>24.0.1</version>
         </dependency>
 
     </dependencies>
